# RentAcarApi-2/src/controllers/reservation.js
@@ -28,7 +28,7 @@ module.exports = {
       customFilter = { userId: req.user._id };
     }
 
-    const data = await getModelList(Reservation, customFilter, [
+    const data = await res.getModelList(Reservation, customFilter, [
       { path: "userId", select: "username fistName lastName" },
       { path: "carId" },
       { path: "createdId", select: "username" },
@@ -64,7 +64,7 @@ module.exports = {
     const userReservationDates = await Reservation.findOne({
       userId: req.body.userId,
       $nor: [
-        { startDate: { $gt: req.body.endDate } }, //*resevation basöangic tarihi mevcut resarvationun bitis tarihinden büyükse sorun yok
+        { startDate: { $gt: req.body.endDate } }, //*resevation baslangic tarihi mevcut resarvationun bitis tarihinden büyükse sorun yok
         { endDate: { $lt: req.body.startDate } }, //*reservation bitis tarihi mevcut reservationun baslangic tarihinden kücükse sorun yok
       ],
     });
